# wasm-pkg

./: Cargo.toml
crates/wasm-pkg-deps/: Cargo.toml
crates/wasm-pkg-deps/src/: config.rs  lib.rs  manifest.rs
src/: main.rs
