[package]
name = "wasm-pkg-deps"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
dirs = { workspace = true }
oci-distribution = { workspace = true }
oci-wasm = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true, features = ["fs"] }
toml = { workspace = true }
